force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Account__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Account__c</fullName>
    <description>The Relationship associated with the credit report.</description>
    <label>Relationship</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Credit_Reports</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>