force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__AlertedMessage__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__AlertedMessage__c</fullName>
    <description>--DEPRECATED-- Alert_Message__c AlertedMessage</description>
    <label>D-AlertedMessage</label>
    <type>TextArea</type>
</CustomField>