force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Available_Credit__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Available_Credit__c</fullName>
    <description>This field contains the usage amount of credit available to the entity.</description>
    <label>Available Credit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>