force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Bankruptcy_Amount__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Bankruptcy_Amount__c</fullName>
    <description>This field contains the total dollar amount of bankruptcies related to the entity.</description>
    <label>Dollar amount of Bankruptcy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>