force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Bankruptcy_Indicator__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Bankruptcy_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The presence of a positive value in this field indicates a known bankruptcy event related to the entity.</description>
    <label>Bankruptcy Indicator</label>
    <type>Checkbox</type>
</CustomField>