force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Collection_Indicator__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Collection_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field contains information related to any known collection events related to the entity.</description>
    <label>Collection Indicator</label>
    <type>Checkbox</type>
</CustomField>