force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Credit_Report_Freeze__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Credit_Report_Freeze__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically selects this checkbox field to indicate an applicant&apos;s credit report is frozen or locked. By default, this field is deselected.</description>
    <inlineHelpText>If selected, this field indicates that an applicant&apos;s credit report is frozen or locked.</inlineHelpText>
    <label>Credit Report Freeze</label>
    <type>Checkbox</type>
</CustomField>