force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Foreclosure__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Foreclosure__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically populates this optional checkbox field to indicate that the record contains foreclosure activity. By default, this field is deselected.</description>
    <inlineHelpText>This checkbox signifies if a record indicates foreclosure activity.</inlineHelpText>
    <label>Foreclosure</label>
    <type>Checkbox</type>
</CustomField>