force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Judgements_Amount_Satisfied__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Judgements_Amount_Satisfied__c</fullName>
    <description>This field contains the total dollar amount  of judgements satisfied on account.</description>
    <label>Dollar amount of judgements satisfied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>