force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Legal_Actions_Indicator__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Legal_Actions_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Legal actions indicator</description>
    <label>Legal Actions</label>
    <type>Checkbox</type>
</CustomField>