force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Median_Balance__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Median_Balance__c</fullName>
    <description>Contains the median dollar balance across all balances for this entity.</description>
    <label>Median Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>