force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__MLA_Status_Covered_Borrower__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__MLA_Status_Covered_Borrower__c</fullName>
    <description>The system automatically selects a value from this picklist field to indicate an applicant&apos;s Military Lending Act covered borrower status. By default, this field is null.</description>
    <inlineHelpText>This field indicates an applicant&apos;s Military Lending Act status.</inlineHelpText>
    <label>MLA Status Covered Borrower</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Match</fullName>
            </value>
            <value>
                <fullName>No Match</fullName>
            </value>
            <value>
                <fullName>Insufficient Data for Match</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>