force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__No_Hit__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__No_Hit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>The system automatically selects this checkbox field to indicate that the vendor database was not able to retrieve credit bureau information for an applicant. By default, this field is deselected.</description>
    <inlineHelpText>This field indicates if the vendor database retrieved an applicant&apos;s Credit Bureau information successfully.</inlineHelpText>
    <label>No Hit</label>
    <type>Checkbox</type>
</CustomField>