force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Recent_Bankruptcy_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Recent_Bankruptcy_Filing_Date__c</fullName>
    <description>If a recent bankruptcy filing is known, this field will contain the date of the filing.</description>
    <label>Bankruptcy Filing Date</label>
    <type>Date</type>
</CustomField>