force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Recent_Judgements_Filing_Date__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Recent_Judgements_Filing_Date__c</fullName>
    <description>This field contains the filing date of the most recent judgement filing, if applicable.</description>
    <label>Judgements Filing Date</label>
    <type>Date</type>
</CustomField>