force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Report_Type__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Report_Type__c</fullName>
    <description>This field contains the credit report pull type for the credit pull.</description>
    <label>Report Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CreditHardPull</fullName>
            </value>
            <value>
                <fullName>CreditSoftPull</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>