force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Tax_Lien_Indicator__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Tax_Lien_Indicator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A positive value in this field indicates the known presence of a tax lien against the entity.</description>
    <label>Tax Lien Indicator</label>
    <type>Checkbox</type>
</CustomField>