force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Total_Exposure__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Total_Exposure__c</fullName>
    <description>This field contains the dollar aount of the total current credit exposure attributed to this entity.</description>
    <label>Total Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>