force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Total_Past_Due__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Total_Past_Due__c</fullName>
    <description>The total past due across all reported credit lines for this entity.</description>
    <label>Total Past Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>