force-app/main/default/objects/nFUSE__Credit_Report__c/fields/nFUSE__Transaction_Log__c.field-meta.xml
<CustomField>
    <fullName>nFUSE__Transaction_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Transaction log record associated with credit report.</description>
    <label>Transaction Log</label>
    <referenceTo>nFUSE__Transaction_Log__c</referenceTo>
    <relationshipLabel>Credit Reports</relationshipLabel>
    <relationshipName>Credit_Reports</relationshipName>
    <type>Lookup</type>
</CustomField>